--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "unocss-preset-starter",
+  "name": "unocss-tw-animate-css",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "packageManager": "pnpm@10.6.2",
-  "description": "<description>",
-  "author": "unpreset <https://github.com/unpreset>",
+  "description": "UnoCSS's animate preset for Wind4",
+  "author": "retronew <https://github.com/retronew>",
   "license": "MIT",
-  "homepage": "https://github.com/unpreset/unocss-preset-starter#readme",
+  "homepage": "https://github.com/retronew/unocss-tw-animate-css#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/unpreset/unocss-preset-starter.git"
+    "url": "git+https://github.com/retronew/unocss-tw-animate-css.git"
   },
   "bugs": {
-    "url": "https://github.com/unpreset/unocss-preset-starter/issues"
+    "url": "https://github.com/retronew/unocss-tw-animate-css/issues"
   },
   "keywords": [
     "unocss",
     "unpreset",
     "unocss-preset",
-    "unocss-preset-starter"
+    "unocss-tw-animate-css"
   ],
   "sideEffects": false,
   "exports": {
@@ -55,20 +55,25 @@
     "deploy": "vite build playground"
   },
   "dependencies": {
-    "@unocss/core": "^66.0.0"
+    "@unocss/core": "^66.2.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.8.1",
-    "@babel/types": "^7.26.10",
-    "@types/node": "^22.13.10",
-    "@unocss/eslint-plugin": "^66.0.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.22.0",
-    "typescript": "5.6.3",
+    "@antfu/eslint-config": "^4.14.1",
+    "@babel/types": "^7.27.6",
+    "@types/node": "^24.0.3",
+    "@unocss/eslint-plugin": "^66.2.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "bumpp": "^10.1.1",
+    "eslint": "^9.29.0",
+    "typescript": "5.8.3",
     "unbuild": "^3.5.0",
-    "unocss": "^66.0.0",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8"
+    "unocss": "^66.2.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
